Fix Fabric localization and configuration for Minecraft 1.20.1
Bundle resource loading and provide translated controls, defaults, and
clear unavailable integration state. Release 1.1.1 after unit, dedicated
server and production-JAR gameplay and localization validation.